Bug 324493 - Kontact crashed after trying to export as WebSite
Summary: Kontact crashed after trying to export as WebSite
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 324222 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-04 12:48 UTC by Michael Riess
Modified: 2013-10-07 14:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Riess 2013-09-04 12:48:55 UTC
Application: kontact (4.11.1)
KDE Platform Version: 4.11.1
Qt Version: 4.8.5
Operating System: Linux 3.10.9-1.ga0841e3-desktop x86_64
Distribution: "openSUSE 12.3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
Trying to export dates as WebSite
error happens with KDE 4.11 and 4.11.1
export as iCal is OK
new install of libQtWebKit4 doesnt solve the problem

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f1067b5f7c0 (LWP 4363))]

Thread 5 (Thread 0x7f104a85f700 (LWP 4364)):
#0  0x00007f105f1eb964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f1062948d70 in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7f10633c6680 <WTF::pageheap_memory>) at /usr/src/debug/webkit-qtwebkit-23/Source/WTF/wtf/FastMalloc.cpp:2571
#2  0x00007f1062948da9 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at /usr/src/debug/webkit-qtwebkit-23/Source/WTF/wtf/FastMalloc.cpp:1767
#3  0x00007f105f1e7e0f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f10650987dd in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f1049f5e700 (LWP 4365)):
#0  0x00007f105f1eb964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f10626c5547 in JSC::BlockAllocator::blockFreeingThreadMain (this=0x7f1049fc9398) at /usr/src/debug/webkit-qtwebkit-23/Source/JavaScriptCore/heap/BlockAllocator.cpp:128
#2  0x00007f106297029e in WTF::wtfThreadEntryPoint (param=0xaee100) at /usr/src/debug/webkit-qtwebkit-23/Source/WTF/wtf/ThreadingPthreads.cpp:196
#3  0x00007f105f1e7e0f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f10650987dd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f0ffbb9f700 (LWP 4368)):
#0  0x00007f106508f87d in poll () from /lib64/libc.so.6
#1  0x00007f105ec2aaa4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f105ec2abc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f10658145d6 in QEventDispatcherGlib::processEvents (this=0x7f0ff40008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#4  0x00007f10657e4bef in QEventLoop::processEvents (this=this@entry=0x7f0ffbb9edc0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f10657e4e78 in QEventLoop::exec (this=0x7f0ffbb9edc0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f10656e7110 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:536
#7  0x00007f10656ea0ec in QThreadPrivate::start (arg=0x9c6220) at thread/qthread_unix.cpp:338
#8  0x00007f105f1e7e0f in start_thread () from /lib64/libpthread.so.0
#9  0x00007f10650987dd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f0ff9b74700 (LWP 4369)):
#0  0x00007f105f1eae0f in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007f105ec67aa1 in g_mutex_unlock () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f105ec2a5a4 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f105ec2aa42 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f105ec2abc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007f10658145d6 in QEventDispatcherGlib::processEvents (this=0x7f0fec0008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#6  0x00007f10657e4bef in QEventLoop::processEvents (this=this@entry=0x7f0ff9b73d90, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f10657e4e78 in QEventLoop::exec (this=0x7f0ff9b73d90, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f10656e7110 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:536
#9  0x00007f10657c53af in QInotifyFileSystemWatcherEngine::run (this=0x8845190) at io/qfilesystemwatcher_inotify.cpp:256
#10 0x00007f10656ea0ec in QThreadPrivate::start (arg=0x8845190) at thread/qthread_unix.cpp:338
#11 0x00007f105f1e7e0f in start_thread () from /lib64/libpthread.so.0
#12 0x00007f10650987dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f1067b5f7c0 (LWP 4363)):
[KCrash Handler]
#6  0x00007f1065d0ee6d in ?? () from /usr/lib64/libkdecore.so.5
#7  0x00007f1065770f3a in QFile::encodeName (fileName=...) at io/qfile.cpp:515
#8  0x00007f10657ba5d5 in QFileSystemEntry::resolveNativeFilePath (this=this@entry=0x8f987c0) at io/qfilesystementry.cpp:171
#9  0x00007f10657ba749 in QFileSystemEntry::isEmpty (this=0x8f987c0) at io/qfilesystementry.cpp:315
#10 0x00007f10657b3c36 in QFSFileEngine::open (this=0x91e5d00, openMode=...) at io/qfsfileengine.cpp:207
#11 0x00007f106577190e in QFile::open (this=0x7fff698c0840, mode=...) at io/qfile.cpp:1035
#12 0x00007f100202f3f0 in ?? () from /usr/lib64/libkorganizerprivate.so.4
#13 0x00007f100202f59d in ?? () from /usr/lib64/libkorganizerprivate.so.4
#14 0x00007f100202fef4 in ?? () from /usr/lib64/libkorganizerprivate.so.4
#15 0x00007f10657fb44f in QMetaObject::activate (sender=0x947f750, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff698c0ce0) at kernel/qobject.cpp:3556
#16 0x00007f1065c778b2 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#17 0x00007f1065c778f0 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#18 0x00007f10657fa92e in QObject::event (this=0x947f750, e=<optimized out>) at kernel/qobject.cpp:1203
#19 0x00007f10661f692c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#20 0x00007f10661fadab in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#21 0x00007f1066f08f76 in KApplication::notify (this=0x7fff698c1780, receiver=0x947f750, event=0x8c8cf70) at /usr/src/debug/kdelibs-4.11.1/kdeui/kernel/kapplication.cpp:311
#22 0x00007f10657e5f3e in QCoreApplication::notifyInternal (this=0x7fff698c1780, receiver=receiver@entry=0x947f750, event=event@entry=0x8c8cf70) at kernel/qcoreapplication.cpp:949
#23 0x00007f10657e98a1 in sendEvent (event=0x8c8cf70, receiver=0x947f750) at kernel/qcoreapplication.h:231
#24 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8292b0) at kernel/qcoreapplication.cpp:1573
#25 0x00007f1065814423 in sendPostedEvents () at kernel/qcoreapplication.h:236
#26 postEventSourceDispatch (s=0x8f9850) at kernel/qeventdispatcher_glib.cpp:280
#27 0x00007f105ec2a7d5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f105ec2ab08 in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f105ec2abc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f10658145b6 in QEventDispatcherGlib::processEvents (this=0x82e710, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#31 0x00007f1066296e0e in ?? () from /usr/lib64/libQtGui.so.4
#32 0x00007f10657e4bef in QEventLoop::processEvents (this=this@entry=0x7fff698c15f0, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007f10657e4e78 in QEventLoop::exec (this=0x7fff698c15f0, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007f10657e9bb8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#35 0x0000000000403679 in ?? ()
#36 0x00007f1064fd1a15 in __libc_start_main () from /lib64/libc.so.6
#37 0x0000000000403be1 in _start ()

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-09-04 13:42:00 UTC
> #6  0x00007f1065d0ee6d in ?? () from /usr/lib64/libkdecore.so.5

Since you can reproduce the crash every time, please install debug symobls and provide a bettter backtrace.
Comment 2 Laurent Montel 2013-09-04 16:10:34 UTC
I can reproduce it.
And fixed it.
Will commit soon.
Comment 3 Laurent Montel 2013-09-04 16:15:48 UTC
Git commit 7aaaedcde828562325fc27ac6a2afca50f97e405 by Montel Laurent.
Committed on 04/09/2013 at 16:15.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 324493 - Kontact crashed after trying to export as WebSite

FIXED-IN: 4.11.2

M  +0    -1    korganizer/calendarview.cpp

http://commits.kde.org/kdepim/7aaaedcde828562325fc27ac6a2afca50f97e405
Comment 4 Michael Riess 2013-09-09 15:53:34 UTC
(In reply to comment #3)
> Git commit 7aaaedcde828562325fc27ac6a2afca50f97e405 by Montel Laurent.
> Committed on 04/09/2013 at 16:15.
> Pushed by mlaurent into branch 'KDE/4.11'.
> 
> Fix Bug 324493 - Kontact crashed after trying to export as WebSite
> 
> FIXED-IN: 4.11.2
> 
> M  +0    -1    korganizer/calendarview.cpp
> 
> http://commits.kde.org/kdepim/7aaaedcde828562325fc27ac6a2afca50f97e405
First of all: Thanks!

Is there a chance that you backport this to 4.11.1 as it is a bugfix?
(as release of 4.11.2 is not until october the 1st and the error is since 4.11
 yes i know, i should have reported it earlier if it was urgent to me)
Comment 5 Laurent Montel 2013-09-09 16:10:43 UTC
(In reply to comment #4)
> (In reply to comment #3)
> > Git commit 7aaaedcde828562325fc27ac6a2afca50f97e405 by Montel Laurent.
> > Committed on 04/09/2013 at 16:15.
> > Pushed by mlaurent into branch 'KDE/4.11'.
> > 
> > Fix Bug 324493 - Kontact crashed after trying to export as WebSite
> > 
> > FIXED-IN: 4.11.2
> > 
> > M  +0    -1    korganizer/calendarview.cpp
> > 
> > http://commits.kde.org/kdepim/7aaaedcde828562325fc27ac6a2afca50f97e405
> First of all: Thanks!
> 
> Is there a chance that you backport this to 4.11.1 as it is a bugfix?
> (as release of 4.11.2 is not until october the 1st and the error is since
> 4.11
>  yes i know, i should have reported it earlier if it was urgent to me)

no :)
4.11.1 is already released.
so not possible.
ask to your distro to add this patch but we can't do it.

Regards
Comment 6 Michael Riess 2013-09-09 16:35:02 UTC
(In reply to comment #5)
> (In reply to comment #4)
> > (In reply to comment #3)
> > > Git commit 7aaaedcde828562325fc27ac6a2afca50f97e405 by Montel Laurent.
> > > Committed on 04/09/2013 at 16:15.
> > > Pushed by mlaurent into branch 'KDE/4.11'.
> > > 
> > > Fix Bug 324493 - Kontact crashed after trying to export as WebSite
> > > 
> > > FIXED-IN: 4.11.2
> > > 
> > > M  +0    -1    korganizer/calendarview.cpp
> > > 
> > > http://commits.kde.org/kdepim/7aaaedcde828562325fc27ac6a2afca50f97e405
> > First of all: Thanks!
> > 
> > Is there a chance that you backport this to 4.11.1 as it is a bugfix?
> > (as release of 4.11.2 is not until october the 1st and the error is since
> > 4.11
> >  yes i know, i should have reported it earlier if it was urgent to me)
> 
> no :)
> 4.11.1 is already released.
> so not possible.
> ask to your distro to add this patch but we can't do it.
> 
> Regards

OK, will do this, Thanks!
Comment 7 Michael Riess 2013-10-07 14:34:03 UTC
*** Bug 324222 has been marked as a duplicate of this bug. ***