Fix Bug 324493 - Kontact crashed after trying to export as WebSite

FIXED-IN: 4.11.2
BUG: 324493